Fix Media Type dropdown width overflow

--- a/src/containers/documentation/swaggerPlugins/StyleOverride.scss
+++ b/src/containers/documentation/swaggerPlugins/StyleOverride.scss
@@ -83,6 +83,10 @@
         }
       }
     }
+    select {
+      min-width: unset !important;
+      max-width: 100%;
+    }
   }
 }
 .swagger-ui .renderedMarkdown {
